force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/SVMXA360__ContractPriceLineItem__c.object-meta.xml
<CustomObject>
    <description>This object has the special pricing/discounts for any part or service.</description>
    <label>Contract Price Line Item</label>
    <nameField>
        <displayFormat>CPLI-{00000000}</displayFormat>
        <label>Contract Price Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Price Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>