force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/fields/SVMXA360__ContractLineId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractLineId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Service Contract Line Item for which the price is defined.</description>
    <label>Contract Line</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Contract Price Line Items</relationshipLabel>
    <relationshipName>Contract_Price_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>