force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/fields/SVMXA360__EntitledDiscount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledDiscount__c</fullName>
    <description>The special discount on the Part, Expense, Labor, or Travel items.</description>
    <label>Entitled Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>