force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/fields/SVMXA360__EntitledServiceId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Entitlement Service for which the price is defined.</description>
    <label>Entitled Service</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Contract Price Line Items</relationshipLabel>
    <relationshipName>Contract_Price_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>