force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/fields/SVMXA360__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductFamily__c</fullName>
    <description>The values of the Product Family.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>