force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Part or Product for which the price is defined.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Price Line Items</relationshipLabel>
    <relationshipName>Contract_Price_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>