force-app/main/default/objects/SVMXA360__ContractPriceLineItem__c/fields/SVMXA360__ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Service Contract for which the price is defined.</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Contract Price Line Items</relationshipLabel>
    <relationshipName>Contract_Price_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>